--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
 <title>Location Search</title>
 
 </head>
-<body>
+<body onload="handleOnLoad()">
     
   <!-- HEADER -->
   <header class="header">
@@ -56,9 +56,7 @@
     <h1>Locations</h1>
   </div>
 
-  
   <script src="https://d3js.org/d3.v6.min.js"></script>
-  <script src="https://unpkg.com/topojson@3"></script>
   <script src="./resources/stript/index.js"></script>
   
 
