--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,7 @@
       Locations
     </div>
     <div class="login-button">
-      <button type="button">Login</button>
+      <a href="C:\innovate2024\login.html"><button type="button">Login</button></a>
     </div>
   </div>
   
