--- a/login.html
+++ b/login.html
@@ -24,6 +24,7 @@
 </header>
 <form>
     <div class="form-group">
+      <div class="login-title"><br>Employee Login</div>
         <label for="exampleInputEmail1"><br>Email address</label>
         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
