--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,16 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <link rel="stylesheet" href="./resources/style/index.css">
 <title>Location Search</title>
 
 </head>
-<body>
+<body onload="handleOnLoad()">
     
   <!-- HEADER -->
   <header class="header">
@@ -28,7 +31,7 @@
       Locations
     </div>
     <div class="login-button">
-      <a href="C:\innovate2024\login.html"><button type="button">Login</button></a>
+      <button type="button">Login</button>
     </div>
   </div>
   
@@ -56,11 +59,14 @@
     <h1>Locations</h1>
   </div>
 
-  
-  
+  <!-- Facilities Table -->
+  <div id="filter-container"></div>
+  <div id="facilities-table"></div>
+
+
+  <script src="https://d3js.org/d3.v6.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="./resources/stript/index.js"></script>
-  
-  
   
 
   
