--- a/3fa7f5cd9f51c0dd/index.html
+++ b/3fa7f5cd9f51c0dd/index.html
@@ -2,6 +2,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="./inspector.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 <link rel="stylesheet" href="./style/index.css">
 <body>
 
@@ -52,6 +54,12 @@
     <h1>Locations</h1>
   </div>
     
+  <!-- Facilities Table -->
+  <div id="filter-container"></div>
+  <div id="facilities-table"></div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+
 <script type="module">
 
 import define from "./index.js";
