--- a/client/resource/index.html
+++ b/client/resource/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Interactive US Map</title>
-    <link rel="stylesheet" href="./resource/style/index.css">
+    <link rel="stylesheet" href="./style/index.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 </head>
 <body>
@@ -11,7 +11,7 @@
   <header class="header">
     <!-- Logo -->
     <div class="logo">
-      <img src="./resource/img/2020-EB-HCA-Healthcare-FC.png" alt="Logo" style="height: 50px;">
+      <img src="./img/2020-EB-HCA-Healthcare-FC.png" alt="Logo" style="height: 50px;">
     </div>
     <!-- Navigation Links -->
     <nav class="nav-links">
@@ -26,7 +26,7 @@
       Locations
     </div>
     <div class="login-button">
-      <button type="button">Login</button>
+      <a href="C:\innovate2024\login.html"><button type="button">Login</button></a>
     </div>
   </div>
   
@@ -53,11 +53,8 @@
   <div class="heading-bar">
     <h1>Locations</h1>
   </div>
-
-  <div id="nameElement">Name will be displayed here</div>
-  
     <div id="usMap" style="width: 600px; height: 400px;"></div>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script src="./resource/script/index.js"></script>
+    <script src="./script/index.js"></script>
 </body>
 </html>
