adam hover text

--- a/client/resource/index.html
+++ b/client/resource/index.html
@@ -37,27 +37,20 @@
         <img src="../resource/img/2020-EB-HCA-Healthcare-FC.png" alt="Logo" style="height: 50px;">
     </div>
     <!-- Navigation Links -->
-    <nav class="nav-links">
-        <!-- Add your navigation links here -->
-    </nav>
+    <nav class="navbar">
+        <!-- Other elements in your navbar -->
+      
+        <!-- This is the location element you want to add -->
+        <div class="navbar-location">
+          Your Location Text Here
+        </div>
+      
+        <!-- Other elements in your navbar -->
+      </nav>
     <!-- Other Header Content -->
 </header>
 
-<!-- Breadcrumbs and Login -->
-<div class="breadcrumbs-login-container">
-    <div class="breadcrumbs">
-        Locations
-    </div>
-    <div class="login-button">
-        <button type="button">Login</button>
-    </div>
-</div>
 
-
-<!-- Heading -->
-<div class="heading-bar">
-    <h1>Locations</h1>
-</div>
 <div id="filter-container"></div>
 
 <div class="main-container">
