--- a/client/resource/index.html
+++ b/client/resource/index.html
@@ -38,7 +38,13 @@
         <img src="../resource/img/2020-EB-HCA-Healthcare-FC.png" alt="Logo" style="height: 50px;">
     </div>
     <!-- Navigation Links -->
-    <nav class="navbar">
+         <nav class="navbar">
+            <div class = "login-button"></div>
+        <a href = "C:\Users\lfcof\innovate2024\login.html">
+            <button> Login </button>
+        </a>
+    </div>
+   </nav>
         <!-- Other elements in your navbar -->
       
         <!-- This is the location element you want to add -->
